set submodule recursive

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          submodules: true 
+          submodules: recursive 
       
       - name: OCL install
         shell: bash -l {0}
