--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,9 +43,9 @@ jobs:
         shell: bash -l {0}
         run: conda info
 
-      - name: Install pocl
+      - name: Install pocl oclgrind
         shell: bash -l {0}
-        run: conda install -y pocl
+        run: conda install -y pocl oclgrind
 
       - name: Install dependencies
         shell: bash -l {0}
