--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,9 +43,9 @@ jobs:
         shell: bash -l {0}
         run: conda info
 
-      - name: Install pocl oclgrind
+      - name: Install oclgrind
         shell: bash -l {0}
-        run: conda install -y pocl oclgrind
+        run: conda install -y oclgrind
 
       - name: Install dependencies
         shell: bash -l {0}
@@ -61,7 +61,7 @@ jobs:
       # Test are not working with << OpenCL-error -1001 "CL_PLATFORM_NOT_FOUND_KHR" >> return code
       - name: Test
         shell: bash -l {0}
-        run: python -m pytest . 
+        run: oclgrind python -m pytest . 
 
       # - name: Coverage
       #   uses: codecov/codecov-action@v1
