--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -58,7 +58,7 @@ jobs:
         shell: bash -l {0}
         run: pip install -e .
 
-      # Test are not working with << OpenCL-error -1001 "CL_PLATFORM_NOT_FOUND_KHR" >> return code
+      # Test are not working with oclgrind, return value are incorrect...
       - name: Test
         shell: bash -l {0}
         run: oclgrind python -m pytest . 
