--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -43,9 +43,9 @@ jobs:
         shell: bash -l {0}
         run: conda info
 
-      - name: Install oclgrind
+      - name: Install pocl
         shell: bash -l {0}
-        run: conda install -y oclgrind
+        run: conda install -y pocl
 
       - name: Install dependencies
         shell: bash -l {0}
@@ -61,7 +61,7 @@ jobs:
       # Test are not working with oclgrind, return value are incorrect...
       - name: Test
         shell: bash -l {0}
-        run: oclgrind python -m pytest . 
+        run: python -m pytest .
 
       # - name: Coverage
       #   uses: codecov/codecov-action@v1
