apt fun disable - use only pocl

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -25,11 +25,11 @@ jobs:
         with:
           submodules: recursive 
       
-      - name: OCL install
-        shell: bash -l {0}
-        run: |
-          sudo apt update
-          sudo apt install opencl-headers ocl-icd-opencl-dev
+      # - name: OCL install
+      #   shell: bash -l {0}
+      #   run: |
+      #     sudo apt update
+      #     sudo apt install opencl-headers ocl-icd-opencl-dev
 
       - name: Set up conda ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2.0.0
