--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -25,11 +25,11 @@ jobs:
         with:
           submodules: recursive 
       
-      - name: OCL install
-        shell: bash -l {0}
-        run: |
-          sudo apt update
-          sudo apt install ocl-icd-opencl-dev
+      # - name: OCL install
+      #   shell: bash -l {0}
+      #   run: |
+      #     sudo apt update
+      #     sudo apt install ocl-icd-opencl-dev
 
       - name: Set up conda ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2.0.0
@@ -43,17 +43,6 @@ jobs:
         shell: bash -l {0}
         run: conda info
 
-      - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          python --version
-          python -m pip install --upgrade pip
-          pip install scikit-build cmake numpy setuptools pytest pytest-cov pytest-benchmark
-      
-      - name: Compile
-        shell: bash -l {0}
-        run: pip install -e .
-
       - name: Install pocl
         shell: bash -l {0}
         run: conda install -y pocl
@@ -62,7 +51,18 @@ jobs:
         shell: bash -l {0}
         run: |
           python --version
-          conda install -c conda-forge -y pyopencl pyclesperanto-prototype
+          conda install -c conda-forge -y pyopencl pyclesperanto-prototype 
+
+      - name: Install dependencies
+        shell: bash -l {0}
+        run: |
+          python --version
+          conda install -c conda-forge -y scikit-build 
+          conda install -y cmake numpy pytest pytest-cov pytest-benchmark
+      
+      - name: Compile
+        shell: bash -l {0}
+        run: pip install -e .
 
       # Test are not working with oclgrind, return value are incorrect...
       - name: Test
