--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -34,8 +34,9 @@ jobs:
       - name: Set up conda ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2.0.0
         with:
+          miniconda-version: "latest"
           auto-update-conda: true
-          activate-environment: test
+          activate-environment: foo
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
 
@@ -67,7 +68,7 @@ jobs:
       # Test are not working with oclgrind, return value are incorrect...
       - name: Test
         shell: bash -l {0}
-        run: python -m pytest .
+        run: pytest .
 
       # - name: Coverage
       #   uses: codecov/codecov-action@v1
