add cmake verbose to see which opencl.so it links

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,13 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(Python_FIND_VIRTUALENV "FIRST") # look for python in virtual env or conda first before checking the system.
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
 
-file(GLOB OpenCL_LIBRARY ${Python_LIBRARY_DIRS}/libOpenCL.so) 
-if(OpenCL_LIBRARY STREQUAL "")
-    message(STATUS "No ICD found in virtual environment.")
+file(GLOB PYTHON_OpenCL_LIBRARY ${Python_LIBRARY_DIRS}/libOpenCL.so) 
+if(PYTHON_OpenCL_LIBRARY STREQUAL "")
+    message(STATUS "WARNING: No ICD found in virtual environment.")
 else()
-    set(OpenCL_LIBRARIES ${OpenCL_LIBRARY})
+    message(STATUS ${OpenCL_LIBRARY})
+    set(OpenCL_LIBRARIES ${PYTHON_OpenCL_LIBRARY})
+    set(OpenCL_LIBRARY ${PYTHON_OpenCL_LIBRARY})
     find_package(OpenCL 1.2 PATHS ${Python_LIBRARY_DIRS} ${Python_INCLUDE_DIRS})
     set(OpenCL_FOUND TRUE)
 endif()
