--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -24,12 +24,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive 
-      
-      # - name: OCL install
-      #   shell: bash -l {0}
-      #   run: |
-      #     sudo apt update
-      #     sudo apt install opencl-headers ocl-icd-opencl-dev
 
       - name: Set up conda ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2.0.0
@@ -48,18 +42,17 @@ jobs:
         shell: bash -l {0}
         run: conda install -y pocl
 
-      - name: Install pyopencl pyclesperanto-prototype
-        shell: bash -l {0}
-        run: |
-          python --version
-          conda install -c conda-forge -y pyopencl pyclesperanto-prototype 
+      # - name: Install pyopencl pyclesperanto-prototype
+      #   shell: bash -l {0}
+      #   run: |
+      #     python --version
+      #     conda install -y pyopencl pyclesperanto-prototype 
 
       - name: Install dependencies
         shell: bash -l {0}
         run: |
           python --version
-          conda install -c conda-forge -y scikit-build 
-          conda install -y cmake numpy pytest pytest-cov pytest-benchmark
+          conda install -y scikit-build cmake numpy pytest pytest-cov pytest-benchmark
       
       - name: Compile
         shell: bash -l {0}
