--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,26 @@
 cmake_minimum_required(VERSION 3.20)
 
 # Set project name and version
-project(pyClesperanto VERSION 0.5.2)
+project(pyClesperanto VERSION 0.2.0)
 
 # Compilation tag for CLIc library linking
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fvisibility=hidden")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -fvisibility=hidden")
+
+# find required package
+set(Python_FIND_VIRTUALENV "FIRST") # look for python in virtual env or conda first before checking the system.
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
+
+# find opencl icd-loader in virtual environment
+file(GLOB PYTHON_OpenCL_LIBRARY ${Python_LIBRARY_DIRS}/libOpenCL.so)
+if(PYTHON_OpenCL_LIBRARY STREQUAL "")
+    message(STATUS "WARNING: No ICD found in virtual environment.")
+else()
+    message(STATUS ${PYTHON_OpenCL_LIBRARY})
+    set(OpenCL_LIBRARIES ${PYTHON_OpenCL_LIBRARY})
+    set(OpenCL_LIBRARY ${PYTHON_OpenCL_LIBRARY})
+    set(OpenCL_FOUND TRUE)
+endif()
 
 # Compile CLIc Back-end library
 add_subdirectory(CLIc)
