--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ requires = [
     "scikit-build",
     "cmake>=3.20",
     "ninja",
-    "pybind11>=2.6"
+    "pybind11>=2.6",
+    "numpy",
+    "toolz"
 ]
 build-backend = "setuptools.build_meta"
 
