--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires = [
     "ninja",
     "pybind11>=2.6",
     "numpy",
-    "toolz"
+    "matplotlib",
+    "toolz",
 ]
 build-backend = "setuptools.build_meta"
 
