wrapper update to CLIc 0.6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(Python COMPONENTS Interpreter Development REQUIRED)
 
 # find opencl icd-loader in virtual environment
 file(GLOB PYTHON_OpenCL_LIBRARY ${Python_LIBRARY_DIRS}/libOpenCL.so)
+
 if(PYTHON_OpenCL_LIBRARY STREQUAL "")
     message(STATUS "WARNING: No ICD found in virtual environment.")
 else()
@@ -28,34 +29,32 @@ add_subdirectory(CLIc)
 
 # split c++ stand-alone build from python wrapper build with scikit-build
 if(DEFINED SKBUILD)
-
     set(ignoreMe "${SKBUILD}")
     set(PACKAGE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pyclesperanto)
     set(WRAPPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrapper)
 
-    file(GLOB_RECURSE WRAPPER_SOURCES_FILES ${WRAPPER_DIR}/*.cpp) 
+    file(GLOB_RECURSE WRAPPER_SOURCES_FILES ${WRAPPER_DIR}/*.cpp)
 
     # call pybind11-config to obtain the root of the cmake package
     execute_process(COMMAND ${PYTHON_EXECUTABLE} -m pybind11 --cmakedir
-                    OUTPUT_VARIABLE pybind11_ROOT_RAW)
+        OUTPUT_VARIABLE pybind11_ROOT_RAW)
     string(STRIP ${pybind11_ROOT_RAW} pybind11_ROOT)
     find_package(pybind11)
 
-    pybind11_add_module(_pyclic MODULE ${WRAPPER_SOURCES_FILES})
-    target_link_libraries(_pyclic PRIVATE CLIc::CLIc)
-    add_dependencies(_pyclic CLIc)
-    target_include_directories(_pyclic PUBLIC "$<BUILD_INTERFACE:${WRAPPER_DIR}>")
-    target_compile_definitions(_pyclic PRIVATE VERSION_INFO=${PROJECT_VERSION})
+    pybind11_add_module(_pyclesperanto MODULE ${WRAPPER_SOURCES_FILES})
+    target_link_libraries(_pyclesperanto PRIVATE CLIc::CLIc)
+    add_dependencies(_pyclesperanto CLIc)
+    target_include_directories(_pyclesperanto PUBLIC "$<BUILD_INTERFACE:${WRAPPER_DIR}>")
+    target_compile_definitions(_pyclesperanto PRIVATE VERSION_INFO=${PROJECT_VERSION})
 
     # Installing the extension module to the root of the package
-    install(TARGETS _pyclic DESTINATION .)
+    install(TARGETS _pyclesperanto DESTINATION .)
 
     if(APPLE)
         set_target_properties(
-            _pyclic PROPERTIES INSTALL_RPATH "@loader_path/${CMAKE_INSTALL_LIBDIR}")
+            _pyclesperanto PROPERTIES INSTALL_RPATH "@loader_path/${CMAKE_INSTALL_LIBDIR}")
     else()
-        set_target_properties(_pyclic PROPERTIES INSTALL_RPATH
+        set_target_properties(_pyclesperanto PROPERTIES INSTALL_RPATH
             "$ORIGIN/${CMAKE_INSTALL_LIBDIR}")
     endif()
-
 endif()
