--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -30,6 +30,14 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set up conda ${{ matrix.python-version }}
+        uses: conda-incubator/setup-miniconda@v2.0.0
+        with:
+          auto-update-conda: true
+          activate-environment: test
+          python-version: ${{ matrix.python-version }}
+          channels: conda-forge
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.8.1
         env:
