--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,25 +23,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest] #, windows-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
 
-      - name: Set up conda ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2.0.0
-        with:
-          auto-update-conda: true
-          activate-environment: test
-          python-version: 3.7
-          channels: conda-forge
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.8.1
-        env:
-          CIBW_ARCHS_MACOS: auto universal2
 
       - name: Verify clean directory
         run: git diff --exit-code
