--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # Set project name and version
-project(pyClesperanto VERSION "0.4.0")
+project(pyClesperanto VERSION "0.6.0")
 
 # Compilation tag for CLIc library linking
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
@@ -10,7 +10,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 # find required package
 set(Python_FIND_VIRTUALENV "FIRST") # look for python in virtual env or conda first before checking the system.
-find_package(Python COMPONENTS Interpreter Development REQUIRED)
+find_package(Python COMPONENTS Development REQUIRED)
 
 # find opencl icd-loader in virtual environment
 file(GLOB PYTHON_OpenCL_LIBRARY ${Python_LIBRARY_DIRS}/libOpenCL.so)
@@ -29,6 +29,7 @@ add_subdirectory(CLIc)
 
 # split c++ stand-alone build from python wrapper build with scikit-build
 if(DEFINED SKBUILD)
+    find_package(pybind11 CONFIG REQUIRED)
     set(ignoreMe "${SKBUILD}")
     set(PACKAGE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pyclesperanto)
     set(WRAPPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrapper)
@@ -39,7 +40,6 @@ if(DEFINED SKBUILD)
     execute_process(COMMAND ${PYTHON_EXECUTABLE} -m pybind11 --cmakedir
         OUTPUT_VARIABLE pybind11_ROOT_RAW)
     string(STRIP ${pybind11_ROOT_RAW} pybind11_ROOT)
-    find_package(pybind11)
 
     pybind11_add_module(_pyclesperanto MODULE ${WRAPPER_SOURCES_FILES})
     target_link_libraries(_pyclesperanto PRIVATE CLIc::CLIc)
