--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 # find required package
 set(Python_FIND_VIRTUALENV "FIRST") # look for python in virtual env or conda first before checking the system.
-find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
 message(NOTICE "Python include dirs: ${Python3_INCLUDE_DIRS}")
 
 # include_directories(SYSTEM ${Python3_INCLUDE_DIRS})
@@ -32,7 +32,6 @@ add_subdirectory(CLIc)
 
 # # split c++ stand-alone build from python wrapper build with scikit-build
 if(DEFINED SKBUILD)
-    find_package(pybind11 CONFIG REQUIRED)
     set(ignoreMe "${SKBUILD}")
     set(PACKAGE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pyclesperanto)
     set(WRAPPER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrapper)
@@ -43,6 +42,7 @@ if(DEFINED SKBUILD)
     execute_process(COMMAND ${PYTHON_EXECUTABLE} -m pybind11 --cmakedir
         OUTPUT_VARIABLE pybind11_ROOT_RAW)
     string(STRIP ${pybind11_ROOT_RAW} pybind11_ROOT)
+    find_package(pybind11 CONFIG REQUIRED)
 
     pybind11_add_module(_pyclesperanto MODULE ${WRAPPER_SOURCES_FILES})
     target_link_libraries(_pyclesperanto PRIVATE CLIc::CLIc)
