--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ addopts= "-v --cov=./ --cov-report=xml"
 [tool.cibuildwheel.linux]
 test-command = ""
 before-all = [
+    "yum install -y git ruby",
     "bash {package}/scripts/unix-opencl-build.sh",
 ]
 
