--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -24,6 +24,9 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest] #, windows-latest, macos-latest]
+    env:
+      CIBW_BUILD: cp37-* cp38-* cp39-* cp310-*
+      CIBW_SKIP: cp27-* pp*
 
     steps:
       - uses: actions/checkout@v3
