--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest] #,ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     env:
       CIBW_BUILD: cp37-* cp38-* cp39-* cp310-*
       CIBW_SKIP: cp27-* pp* *-musllinux_* *-win32
