--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,10 +23,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest] #, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-2019, macos-latest]
     env:
-      CIBW_BUILD: cp39-*
-      CIBW_SKIP: cp27-* pp* *-musllinux_* *-win32 cp37-* cp38-* cp310-*
+      CIBW_BUILD: cp37-* cp39-* cp38-* cp310-*
+      CIBW_SKIP: cp27-* pp* *-musllinux_* *-win32
       # CIBW_TEST_REQUIRES: pytest
       # CIBW_TEST_COMMAND: "pytest {project}/tests"
 
@@ -59,23 +59,23 @@ jobs:
         with:
           path: dist/*.tar.gz
 
-  upload_all:
-    name: Upload if release
-    needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
-    # upload to PyPI on every tag starting with 'v'
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+  # upload_all:
+  #   name: Upload if release
+  #   needs: [build_wheels, build_sdist]
+  #   runs-on: ubuntu-latest
+  #   # upload to PyPI on every tag starting with 'v'
+  #   if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
 
-    steps:
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.x"
+  #   steps:
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.x"
 
-      - uses: actions/download-artifact@v3
-        with:
-          name: artifact
-          path: dist
+  #     - uses: actions/download-artifact@v3
+  #       with:
+  #         name: artifact
+  #         path: dist
 
-      - uses: pypa/gh-action-pypi-publish@v1.5.1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+  #     - uses: pypa/gh-action-pypi-publish@v1.5.1
+  #       with:
+  #         password: ${{ secrets.PYPI_API_TOKEN }}
