lib-sdir is .libs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ before-all = [
     "yum install -y ruby",
     "bash {package}/scripts/build-opencl-linux.sh",
 ]
-repair-wheel-command = "auditwheel repair --lib-sdir ~/deps -w {dest_dir} {wheel}"
+repair-wheel-command = "auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"
 
 [[tool.cibuildwheel.windows]]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
