--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-test-requires = ["numpy", "pytest"]
+test-requires = ["pocl", "numpy", "pytest"]
 test-command = "pytest {project}/tests"
 #test-extras = ["tests"]
 
