--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,10 +23,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest] #, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     env:
       CIBW_BUILD: cp37-* cp39-* cp38-* cp310-*
-      CIBW_SKIP: cp27-* pp* *-musllinux_* *-win32 *universal2*
+      CIBW_SKIP: cp27-* pp* *-musllinux_* *-win32 *universal2* *i686*
 
     steps:
       - uses: actions/checkout@v3
@@ -46,7 +46,7 @@ jobs:
 
   build_sdist:
     name: Build source distribution
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-lateste
     steps:
       - uses: actions/checkout@v3
 
@@ -77,3 +77,5 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@v1.5.1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+          skip_existing: true
+          verbose: true
