--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ test-command = ""
 #test-command = "pytest {project}/tests"
 
 [tool.cibuildwheel.linux]
-skip = ["cp27-*", "pp*"]
+skip = ["cp27-*", "cp36-*", "pp*"]
 before-all = [
     "yum install -y ruby",
     "bash {package}/scripts/build-opencl-linux.sh",
@@ -31,11 +31,11 @@ before-all = [
 ]
 
 [tool.cibuildwheel.windows]
-skip = ["cp27-*", "pp*", "*-win32"]
+skip = ["cp27-*", "cp36-*", "pp*", "*-win32"]
 before-all = "bash {package}/scripts/build-opencl-windows.sh"
 #before-build = "cmake configure.py --cxxflags=-ID:/a/pyopencl/pyopencl/OpenCL-Headers/install/include --ldflags=\"/LIBPATH:C:/Program Files/OpenCL-ICD-Loader/lib\""
 before-build = "Powershell -Command " setx -m pathtest \"$env:path ";" $env:C:/Program Files/OpenCL-ICD-Loader/lib\"""
 
 [tool.cibuildwheel.macos]
-skip = ["cp27-*", "pp*", "*_universal2"]
+skip = ["cp27-*", "cp36-*", "pp*", "*_universal2"]
 before-all = "bash {package}/scripts/build-opencl-macos.sh"
